--- a/index.html
+++ b/index.html
@@ -1,82 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="styles.css">
- <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Collections</title>
+    <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
-
-<h2>Our Mission</h2>
-<figure class="logo">
-  <img src="logo2.png" alt="Logo" class="mission-logo">
-  <figcaption>
-    <p class="mission-text">We strive to bring people interesting and unique art that inspires them to be more creative and enjoy their homes. We know art can be expensive, so we work with a rotating set of artists and photographers to being you fantastic prints - all for free. We just ask that you donate what you think is fair, or share the site with someone who might like great art as much as you do. </p>
-  </figcaption>
-</figure>
-
-
- <section id="selections">
-   <h2>Collections</h2>
- <ul>
-
-<li>
-  <figure class="image1-abs">
-    <img src="img/abstract.jpg" alt="Abstract">
-    <figcaption>
-           <a href="#">Abstract</a>
-          </figcaption>
-  </figure>
-</li>
-
-<li>
-  <figure class="image2-land">
-    <img src="img/landscape.jpg" alt="Landscape">
-    <figcaption>
-           <a href="#">Landscape</a>
-          </figcaption>
-  </figure>
-</li>
-
-<li>
-  <figure class="image3-music">
-    <img src="img/music.jpg" alt="Music">
-    <figcaption>
-           <a href="#">Music</a>
-          </figcaption>
-  </figure>
-</li>
-
-<li>
-  <figure class="image4-pop">
-             <img src="img/pop-art.jpg" alt="Pop-art">
-          <figcaption>
-           <a href="#">Pop-Art</a>
-          </figcaption>
-  </figure>
-</li>
-
-<li>
-  <figure class="image5-vehi">
-             <img src="img/vehicles.jpg" alt="Vehicles">
-          <figcaption>
-           <a href="#">Vehicles</a>
-          </figcaption>
-  </figure>
-</li>
-
-<li>
-  <figure class="image6-vivid">
-             <img src="img/vivid.jpg" alt="Vivid">
-          <figcaption>
-           <a href="#">Vivid</a>
-          </figcaption>
-  </figure>
-</li>
-
-</ul>
-</section>
+    <section id="collections">
+        <h2>Collections</h2>
+        <ul>
+            <li>
+                <figure class="color7">
+                    <img src="img/pop-art.jpg" alt="Pop Art: This must be the place" />
+                    <figcaption><a href="#">Pop Art</a></figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="color2">
+                    <img src="img/abstract.jpg" alt="Abstract: grey and green squares." />
+                    <figcaption><a href="#">Abstract</a></figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="color6">
+                    <img src="img/vivid.jpg" alt="Tree on island in lake with purple sunrise." />
+                    <figcaption><a href="#">Vivid</a></figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="color8">
+                    <img src="img/music.jpg" alt="Music: guitar leaning against wall." />
+                    <figcaption><a href="#">Music</a></figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="color4">
+                    <img src="img/vehicles.jpg" alt="Vehicles: 1930's car on street." />
+                    <figcaption><a href="#">Vehicles</a></figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="color3">
+                    <img src="img/landscape.jpg" alt="Landscape: moonrise over tree-covered mountains." />
+                    <figcaption><a href="#">Landscape</a></figcaption>
+                </figure>
+            </li>
+        </ul>
+    </section>
 </body>
+
 </html>
