--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+    <section id="mission">
+        <h2>Our Mission</h2>
+        <div class="missiontext">
+            <p>
+                <img src="img/logo2.png" alt="Logo for Wall of Wonder." class="missionimg" /> We strive to bring people interesting and unique art that inspires them to be more creative and enjoy their homes. We know art can be expensive, so we work with
+                a rotating set of artists and photographers to being you fantastic prints - all for free. We just ask that you donate what you think is fair, or share the site with someone who might like great art as much as you do.
+            </p>
+        </div>
+    </section>
     <section id="collections">
         <h2>Collections</h2>
         <ul>
@@ -51,6 +60,24 @@
             </li>
         </ul>
     </section>
+<div class="footer">
+    <footer>
+<div class="social-1">
+<p><b>Stay Connected!</b></p>
+    <ul>
+       <li><a href="https://www.facebook.com" target="_blank"><img src="img/facebook-icon.svg" alt="facebook-icon-link"></a></li> 
+        <li><a href="https://www.instagram.com" target="_blank"><img src="img/instagram-icon.svg" alt="instagram-icon-link"></a></li> 
+        <li></li>
+    </ul>
+</div> 
+    <address>
+        Wall Of Wonder</br>
+        RBC Plaza</br>
+        60 South 6th Street</br>
+        Minneapolis, MN 55402
+    </address>
+
+</div>
 </body>
 
 </html>
